--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
     "@google/genai": "^1.30.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tanstack/react-query": "^5.90.11",
     "autoprefixer": "^10.4.22",
+    "bcryptjs": "^3.0.3",
     "lucide-react": "^0.554.0",
+    "mongodb": "^6.21.0",
+    "mongoose": "^9.0.0",
     "next": "^16.0.5",
+    "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
