Enhance database seeding functionality and configuration. Introduce new seeder scripts for users, agents, conversations, and messages, along with a comprehensive seed configuration. Update environment variables in .env.local.example for production seeding requirements. Refactor agent service to load system agents from the database with fallback to defaults, improving agent management. Add utility functions for logging and argument parsing in seed operations.

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,3 +11,7 @@ NEXTAUTH_SECRET=your-super-secret-key-change-in-production
 # Optional: Google OAuth (for future implementation)
 # GOOGLE_CLIENT_ID=your_google_client_id
 # GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Database Seeding (required for production seeding)
+# ADMIN_PASSWORD=secure-admin-password
+# SYSTEM_USER_PASSWORD=secure-system-password
