--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "db:seed": "tsx scripts/seed/index.ts",
+    "db:seed:reset": "tsx scripts/seed/index.ts --reset",
+    "db:clear": "tsx scripts/seed/index.ts --clear"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
+    "tsx": "^4.19.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
