--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,18 @@
 # Gemini API
 GEMINI_API_KEY=your_gemini_api_key
 
+# Azure OpenAI (GPT-5 Models)
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com
+# Optional: defaults to 2024-10-21 (latest GA version)
+# AZURE_OPENAI_API_VERSION=2024-10-21
+
+# Azure Deployment Names - GPT-5 Models (map to your Azure deployment names)
+AZURE_OPENAI_DEPLOYMENT_GPT5=gpt-5
+AZURE_OPENAI_DEPLOYMENT_GPT5_MINI=gpt-5-mini
+AZURE_OPENAI_DEPLOYMENT_GPT5_NANO=gpt-5-nano
+AZURE_OPENAI_DEPLOYMENT_GPT5_CHAT=gpt-5-chat
+
 # MongoDB (use docker-compose up -d to start)
 MONGODB_URI=mongodb://localhost:27017/agoryx-chat
 
