--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^9.0.0",
     "next": "^16.0.5",
     "next-auth": "^4.24.13",
+    "openai": "^6.9.1",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -37,7 +38,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
-    "tsx": "^4.19.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -51,6 +51,7 @@
     "happy-dom": "^20.0.11",
     "mongodb-memory-server": "^10.3.0",
     "msw": "^2.12.3",
+    "tsx": "^4.19.0",
     "typescript": "~5.8.2",
     "vitest": "^4.0.14"
   }
