Integrate DialX provider for multi-provider AI model access. Update .env.local.example with DialX API configuration options. Refactor agent service to utilize SYSTEM_AGENTS from seed data, enhancing agent management. Update tests to reflect changes in agent handling and improve overall integration with new DialX models.

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,14 @@ AZURE_OPENAI_DEPLOYMENT_GPT5_MINI=gpt-5-mini
 AZURE_OPENAI_DEPLOYMENT_GPT5_NANO=gpt-5-nano
 AZURE_OPENAI_DEPLOYMENT_GPT5_CHAT=gpt-5-chat
 
+# DialX (AI DIAL) - Model Aggregator
+# Access models from OpenAI, Anthropic, Google, Meta, Mistral via unified API
+DIALX_API_KEY=your_dialx_api_key
+# Optional: defaults to https://ai-proxy.lab.epam.com
+# DIALX_ENDPOINT=https://ai-proxy.lab.epam.com
+# Optional: defaults to 2024-02-01
+# DIALX_API_VERSION=2024-02-01
+
 # MongoDB (use docker-compose up -d to start)
 MONGODB_URI=mongodb://localhost:27017/agoryx-chat
 
